Feature: Use local fonts.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Xcode signing & build settings
+*.xcworkspace
+*.xcuserstate
+*.xcuserdata
+*.xcodeproj/project.xcworkspace
+*.xcodeproj/xcuserdata
+
+# Ignore Tauri's generated mobile project folders
+/src-tauri/gen/
